--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -1,15 +1,17 @@
-.button {
-  
-}
-
 .ddWrapper {
   width: 500px;
   border: none;
   color: #6E6E6E;
+  position: absolute;
+  left: 0; 
+  right: 0;
+  top: 50px; 
+  margin-left: auto; 
+  margin-right: auto; 
 }
 
 .ddHeader {
-  width: 500px;
+  max-width: 500px;
   display: flex;
   align-items: center;
   background-color: #FFFFFF;
@@ -26,7 +28,7 @@
 input {
   border: 0;
   outline: 0;
-  width: 500px;
+  width: 400px;
   font-size: 30px;
   color: #6E6E6E;
 }
@@ -47,7 +49,6 @@ input:focus {
   width: 10%;
   display: flex;
   justify-content: center;
-  /* border: solid white 2px; */
 }
 
 .ddList {
