--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -13,6 +13,7 @@
 .ddHeader {
   max-width: 500px;
   display: flex; 
+  justify-content: space-evenly;
   background-color: #FFFFFF;
   border: solid #6E6E6E 2px;
   color: #6E6E6E;
@@ -27,7 +28,7 @@
 input {
   border: 0;
   outline: 0;
-  width: 400px;
+  width:380px;
   font-size: 30px;
   color: #6E6E6E;
 }
@@ -90,5 +91,14 @@ input:focus {
   font-weight: 100;
   padding: 0 5px;
   padding-bottom: 5px;
-  margin-right: 5px;
+  /* margin-right: 5px; */
+}
+
+.closeBtn {
+  display: flex;
+  align-items: center;
+}
+
+.menuButtons {
+  display: flex;
 }
